syntax = "proto3";

package speechly.config.v1;

option csharp_namespace = "Speechly.Config.V1";
option go_package = "configv1";
option java_multiple_files = true;
option java_outer_classname = "AppProto";
option java_package = "com.speechly.config.v1";
option objc_class_prefix = "SCX";
option php_namespace = "Speechly\\Config\\V1";

// App fields.
message App {
  string id = 1;
  // IETF language tag
  string language = 2;
  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_NEW = 1;
    STATUS_TRAINING = 2;
    STATUS_TRAINED = 3;
    STATUS_FAILED = 4;
  }
  Status status = 3;
  // Name is for humans, if empty, id should be shown.
  string name = 4;
  // Queue size when STATUS_NEW.
  int32 queue_size = 5;
  // Error when STATUS_FAILED, for more visibility.
  string error_msg = 6;
  // Estimated training time remaining. If 0 then no estimate is available.
  int32 estimated_remaining_sec = 7;
}
